# eyerobot

./: .gitignore  .gitmodules  README.md  pyproject.toml
dependencies/insta360/: CMakeLists.txt  README.md  pyproject.toml  setup.py
dependencies/insta360/dependencies/CameraSDK/include/camera/: camera.h  ins_types.h  photography_settings.h
dependencies/insta360/example/: main.cc
dependencies/insta360/scripts/: test.py
dependencies/insta360/src/: camera_module.cpp
dependencies/insta360/src/insta360/: __init__.py
eye/: agent_configs.py  agents.py  camera.py  eyeball.py  foveal_encoders.py  image_utils.py  lkm.py  pid.py  tracking.py  transformer.py  ur5_visualizer.py  youtube_utils.py  zmq_tools.py
eye/agents/: __init__.py  eye_robot_agent.py  robot_agent.py  visual_search_agent.py
eye/sim/: act_visualizer.py  demo_data.py  gyms.py  rewards.py  spherical_video.py
eye/transforms/: _base.py  _se3.py  _so3.py
eye/transforms/utils/: _utils.py
scripts/: align3r.py  bc_robot.py  camera_stream.py  cb_calibrate.py  data_collect.py  download_yt.py  eye_controller.py  joint_stats.py  live_eval.py  robot_eye_demo.py  robot_inference.py  split_demo_vids.py  svo_export.py  test360.py  test_visual_search_sim.py  train_avp.py  train_bcrl.py  ur5_visualizer.py  vis_processed_data.py  viser_visualizer.py  visual_search_demo.py  visualize_blockmasks.py  visualize_datacloud.py  visualizer.py
urdf/: ur5e_with_robotiq_gripper.urdf
